style/styling.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap');

:root {
    --dark-blue: #2C3639;
    --nearly-rotten-mango: #FFB84C;
    --off-white: #DCD7C9; 
}

* {
    box-sizing: border-box;
    scroll-padding-top: 7em;
    margin: 0;
    padding: 0;
    background-color: var(--dark-blue);
    scroll-behavior: smooth;
}

body {
    overflow-x: hidden;
}

.logo {
    font-family: 'Ubuntu Mono';
    font-style: normal;
    font-weight: 700;
    font-size: calc(2rem + 0.390625vw);
    line-height: 31px;
    color: var(--nearly-rotten-mango);
}

h1 {
    font-family: 'Ubuntu Mono';
    font-style: normal;
    font-size: calc(2rem + 0.390625vw);
    font-weight: 700;
    line-height: calc(3.125rem + 0.390625vh);
    padding-bottom: calc(0.5rem + 0.390625vh);
    color: var(--nearly-rotten-mango);
}

li, a {
    font-family: 'Ubuntu Mono';
    font-style: normal;
    font-weight: 400;
    font-size: calc(1.125rem + 0.390625vw);
    line-height: calc(2rem + 0.390625vw);
    color: var(--nearly-rotten-mango);
    text-decoration: none;
   
}

header {
    display: flex;
    position: fixed;
    width: calc(100% + 0.390625vw);
    justify-content: space-between;
    align-items: center;
    padding: 30px 10%;
    opacity: 0.95;
    border-bottom: 3px solid var(--nearly-rotten-mango);
}

.navBar {
    margin-right: calc(-2.5% + 0.390625vw);
}

.navLinks {
    list-style: none;
    opacity: 1;
}

.navLinks[data-visible="true"] {
    transform: translateX(0%);
}

.navLinks li {
    list-style: none;
    display: inline-block;
    padding: 0px 2.5rem;
   
}

.navLinks li a {
    color: var(--nearly-rotten-mango);
    transition: all 0.15s ease 0s;
}

.navLinks li a:hover {
    color: var(--nearly-rotten-mango);
    transition: all 0.15s ease 0s;
}

.wrapper {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    align-items: left;
    padding: 10rem 10%; 
}

.wrapper p{
    margin: 1.25rem;
    font-family: 'Ubuntu Mono';
    font-style: normal;
    font-weight: 400;
    font-size: calc(0.8rem + 0.390625vw);
    line-height: calc(1.5rem + 0.390625vw);
    text-align: justify;
    color: var(--off-white);
    margin-right: calc(0.1% + 0.390625vw);
}

.wrapper .about {
    padding-bottom: calc(5% + 0.390625vh);
}

.wrapper .about .emphasize-using-color{
    color: var(--nearly-rotten-mango)
}

.wrapper .about .emphasize-using-weight{
    font-weight: 700;
}

.wrapper .about img {
    margin-right: calc(0.5rem + 0.390625vw);
    float: left;
    width: calc(20% + 0.390625vw);
}

.wrapper .about .about-hyperlinks {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}

.wrapper .about .about-hyperlinks img {
    width: calc(2em + 0.390625vw);
    height: calc(2em + 0.390625vh);
    margin: 0 0 0 0;
}

.wrapper .about p {
    margin: 0 0 calc(1rem + 0.390625vw) 0;
    line-height: calc(1.35rem + 0.390625vh);
}

.wrapper .skills {
    padding-bottom: calc(5rem + 0.390625vh);
}

.wrapper .skills .grid-container {
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    min-width: 0;
    gap: calc(0.75rem + 0.390625vw);
    /* padding-block: 1rem; */
    margin-inline: auto;
}

.wrapper .skills .grid-container img{
    width: calc(65px + 0.390625vw);
    height: calc(65px + 0.390625vh);
}

.wrapper .skills .grid-container p{
    line-height: calc(1.1rem + 0.390625vh);
    text-align: center;
}

.wrapper .skills .grid-container .grid-item {
   outline: 1px solid var(--nearly-rotten-mango);
   padding: calc(0.9rem + 0.390625vh);
}

.wrapper .skills .grid-container .grid-item img{
    margin-left: calc(1.8rem + 0.390625vw);
    margin-top: calc(1rem + 0.390625vh);
}

.wrapper .skills .grid-container p{
    margin-left: calc(0.4rem + 0.390625vw);
 }

.wrapper .projects img {
    margin-right: calc(1rem + 0.390625vw);
    float: left;
    width: calc(25% + 0.390625vw);
}

.wrapper .projects {
    padding-bottom: calc(5rem + 0.390625vw);
    border-bottom: 3px solid var(--nearly-rotten-mango);
}

.wrapper .projects .flex-container .flex-item {
    margin: calc(0.75rem + 0.390625vh) 0 0 0;    
}

.wrapper .projects .flex-container .flex-item .main-project-image {
    outline: 1px solid var(--nearly-rotten-mango);
    margin: 0 calc(0.2rem + 0.390625vw) 0 0;
    width: calc(25% + 0.390625vw); 
    height: calc(25% + 0.390625vh);
}

.wrapper .projects .flex-container .title {
    color: var(--off-white);
    font-family: 'Ubuntu Mono';
    font-style: normal;
    font-weight: 700;
    font-size: calc(1.8rem + 0.390625vw);
    margin:0 0 calc(0.5rem + 0.390625vh) 0;
    text-align: left;
}

.wrapper .projects .flex-container .subtitle {
    color: var(--nearly-rotten-mango);
    font-family: 'Ubuntu Mono';
    font-style: normal;
    font-weight: 400;
    text-align: justify;    
    margin: 0 0 calc(0.1rem + 0.390625vw) 0;
    line-height: calc(1rem + 0.390625vh);
}

.wrapper .projects .flex-container .project-description {
    color: var(--off-white);
    font-family: 'Ubuntu Mono';
    font-style: normal;
    font-weight: 400;
    text-align: justify;
    margin: 0 0 calc(1rem + 0.390625vw) 0; 
    line-height: 1.5rem;
}

.wrapper .projects .flex-container .flex-item .project-description a {
    color: var(--nearly-rotten-mango);
    margin: 0 0 calc(1rem + 0.390625vw) 0;
    font-size: calc(0.81rem + 0.390625vw);
    line-height: 1.5rem;
}

.wrapper .projects .flex-container .flex-item .project-hyperlinks {
    display: flex;
    justify-content: flex-end;
}

.wrapper .projects .flex-container .flex-item .project-hyperlinks a {
    margin: calc(1% - 0.390625vh) calc(1% - 0.390625vh) 0 0;
    outline: 1px solid var(--nearly-rotten-mango);
}

.wrapper .projects .flex-container .flex-item .project-hyperlinks a p {
    font-size: calc(0.7rem + 0.390625vw);
    font-weight: 400;
    padding: 0 0 0 0;
    margin: 0 calc(0.5rem + 0.390625vw) 0 calc(0.625rem + 0.390625vw);
    color: var(--nearly-rotten-mango);
}
/* ... */

